# NUCLEO-STM32G431RB-MC

./: .gitignore  CMakeLists.txt  CMakePresets.json  NUCLEO-STM32G431RB-MC.stwb6  README.md
NUCLEO-STM32G431RB-MC/: .mxproject  NUCLEO-STM32G431RB-MC.ioc  NUCLEO-STM32G431RB-MC.ioc.bak  NUCLEO-STM32G431RB-MC.ioc.wb  NUCLEO-STM32G431RB-MC.settings  NUCLEO-STM32G431RB-MC.wbdef
NUCLEO-STM32G431RB-MC/Inc/: drive_parameters.h  main.h  mc_config.h  mc_configuration_registers.h  parameters_conversion.h  pmsm_motor_parameters.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h
NUCLEO-STM32G431RB-MC/MDK-ARM/: NUCLEO-STM32G431RB-MC.uvoptx  NUCLEO-STM32G431RB-MC.uvprojx
NUCLEO-STM32G431RB-MC/STM32CubeIDE/: .cproject  .project
NUCLEO-STM32G431RB-MC/STM32CubeIDE/Demo/: app_main.c  app_main.h
NUCLEO-STM32G431RB-MC/Src/: adc.c  fdcan.c  gpio.c  main.c  mc_app_hooks.c  mc_config.c  mc_configuration_registers.c  mc_parameters.c  mc_tasks.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c  stm32g4xx_mc_it.c  tim.c  usart.c
cmake/: lib_cmsis.cmake  lib_hal.cmake
demo/: CMakeLists.txt  demo.c
demo/__linker/: gcc_arm.ld
demo/__startup/: __vectors.c
